@@ -1,11 +1,11 @@
-<div id="home-section" role="banner" class="nav-section">
+<div id="home-section" role="region" title="Quick navigation" class="nav-section">
   <h2>
     <a href="<%= rel_prefix %>/index.html" rel="home">Home</a>
   </h2>
 
-  <h3>
+  <div id="table-of-contents-navigation">
     <a href="<%= rel_prefix %>/table_of_contents.html#pages">Pages</a>
     <a href="<%= rel_prefix %>/table_of_contents.html#classes">Classes</a>
     <a href="<%= rel_prefix %>/table_of_contents.html#methods">Methods</a>
-  </h3>
+  </div>
 </div>
