@@ -1231,8 +1231,8 @@ class RDoc::RubyLex
       end
 
       if @ltype == "/"
-        if peek(0) =~ /i|m|x|o|e|s|u|n/
-          getc
+        while peek(0) =~ /i|m|x|o|e|s|u|n/
+          str << getc
         end
       end
 
